--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT = 8000
-MONGO_URI =  "mongodb+srv://faisalirfan2502:UqnLOu9jFNzrTHM3@cluster0.twdcd5i.mongodb.net/Datas"
+MONGO_URI =  mongodb+srv://faisalirfan2502:UqnLOu9jFNzrTHM3@cluster0.twdcd5i.mongodb.net/Datas
