--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "socket.io": "^4.7.4"
   },
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "node app.js",
     "start-server": "node app.js"
   }
 }
